fix: home header display on safari

--- a/css/pokedex.css
+++ b/css/pokedex.css
@@ -79,7 +79,7 @@
 }
 
 .home-header {
-    display: ruby-text;
+    display: ruby;
 }
 
 .search {
